test_scores/negative_dimers/features/Q6PI77.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q6PI77.pkl.xz